--- a/DEINT-Ej6_Conversor_de_unidades/DEINT-Ej6_Conversor_de_unidades.csproj
+++ b/DEINT-Ej6_Conversor_de_unidades/DEINT-Ej6_Conversor_de_unidades.csproj
@@ -62,6 +62,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="MVVM\Views\CalculatorView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="MVVM\Views\UnitsConverterView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
